# UMassDormFinder

./: LICENSE  README.md  data.json  data.py  main.py  pyproject.toml
static/css/: main.css  styles.css
templates/: base.html  central.html  dorm-redegisn.html  dorm.html  index.html  quiz.html
